--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "apify": "latest",
+    "extend": "latest",
     "bluebird": "latest",
     "underscore": "latest"
   }
