--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apify": "^0.4.36",
     "extend": "^3.0.1",
     "bluebird": "^3.5.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "request-promise": "^4.2.2"
   }
 }
